# mersal-structlog

./: .gitignore  README.rst  pyproject.toml
mersal_structlog/: __init__.py  config.py  plugin.py
